--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
 <link href="style.css" rel="stylesheet"></head>
 <body>
     <div id="app"></div>
-    <h1>404</h1>
     <script src="https://cdn.bootcss.com/highlight.js/9.10.0/highlight.min.js"></script>
-    <!--<script type="text/javascript" src="common.js"></script>-->
-    <!--<script type="text/javascript" src="bundle.js"></script></body>-->
+    <script type="text/javascript" src="common.js"></script>
+    <script type="text/javascript" src="bundle.js"></script></body>
 
 </html>
