--- a/index.html
+++ b/index.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <title>Fantasy</title>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <meta name="viewport" content="initial-scale=1, maximum-scale=3, minimum-scale=1, user-scalable=no">
-<link href="style.css" rel="stylesheet"></head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" href="/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Vite App</title>
+    <script type="module" crossorigin src="/assets/index.6d6c6eff.js"></script>
+    <link rel="stylesheet" href="/assets/index.590d02cb.css">
+  </head>
+  <body>
     <div id="app"></div>
-    <script src="https://cdn.bootcss.com/highlight.js/9.10.0/highlight.min.js"></script>
-    <script type="text/javascript" src="common.js"></script>
-    <script type="text/javascript" src="bundle.js"></script></body>
-
+    
+  </body>
 </html>
